--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
+    "react-aria-components": "^1.11.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
