--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@remotion/captions": "^4.0.340",
     "@remotion/whisper-web": "4.0.340",
     "motion": "^12.23.12",
     "next": "15.5.0",
