--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@remotion/captions": "^4.0.340",
     "@remotion/whisper-web": "4.0.340",
+    "clsx": "^2.1.1",
     "motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-aria-components": "^1.11.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
